--- a/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
+++ b/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
@@ -14,7 +14,7 @@
 .cardLocais{
     height: 600px;
     width: 400px;
-    background-color: honeydew;
+    background-color: lavender;
     /* display: flex; */
     margin: auto;
     margin-top: 15px;
