--- a/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
+++ b/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
@@ -93,19 +93,25 @@
 }
 .Icon1{
     color: #116582;
+    margin-right: 5px;
 }
 .Icon2{
+    margin-right: 5px;
     color: #040404;
 }
 .Icon3{
+    margin-right: 5px;
     color: #118222;
 }
 .Icon4{
+    margin-right: 5px;
     color: #3ce812;
 }
 .Icon5{
+    margin-right: 5px;
     color: #824011;
 }
+
 
 .nomeItem{
     margin-left: auto;
