Atualiza versao header e margins em andamento

--- a/src/components/header/heade.module.css
+++ b/src/components/header/heade.module.css
@@ -4,19 +4,22 @@
     border-left: transparent;
     border-right: transparent;
     position: relative;
-	margin-top: -15px;
+	/* margin-top: -121px; */
+    top: -5px;
     height: 100px;
 	justify-content: center;
 	align-items: center;
 	font-size: 1.2em;
 	font-weight: bold;
-	text-decoration: none;
+	text-decoration: none; 
     /* width: 100vw; */
 	padding: 0.5em 1.5em;
     box-shadow: 0 5px 5px -3px rgb(169, 169, 169);
     /* z-index: 4 !important;
     position: fixed !important; */
-
+    width: 100vw;
+    position: fixed;
+    z-index: 5;
 }
 
 .navContain{
