--- a/src/pages/arvores/listarArvores/listaarvores.module.css
+++ b/src/pages/arvores/listarArvores/listaarvores.module.css
@@ -2,6 +2,11 @@
 
     margin-top: 100px
     }
+
+.divFundoLista{
+    margin-top: 8%;
+}
+
     .Tabela{
         width: 80%;
         margin: auto
