Atualiza versao lista de locais ajuste espaçamento

--- a/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
+++ b/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
@@ -11,6 +11,13 @@
     margin: auto;
     
 }
+.migalhas{
+    display: flex;
+    margin-left: 10%
+}
+.divFubdoLista{
+    margin-top: 10%;
+}
 .cardLocais{
     height: 600px;
     width: 400px;
