--- a/src/pages/sobre/sobre.module.css
+++ b/src/pages/sobre/sobre.module.css
@@ -1,7 +1,8 @@
 .DivHeader{
     height: 180px;
-    width: 100vw;
+    width: 100%;
     background: linear-gradient(#55ACEE, #295271 );
+    margin-top: 50px;
 }
 .BarHeader{
     justify-content: center;
