--- a/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
+++ b/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
@@ -67,6 +67,13 @@
     margin-right: 10px;
 }
 
+.divDescricao{
+    margin-top: 10px;
+    overflow: auto;
+    height: 100px;
+    margin-bottom: -50px;
+   
+}
 .cardLocais{
     height: 600px;
     width: 400px;
