--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -12,7 +12,7 @@
     /* margin-top: 100px; */
 }
 .divFundoHome{
-    margin-top: 8%;
+    margin-top: 95px;
 }
 .tituloH2{
     font-family: var(--fontPadrao);
