Atualiza versao redefinição de senha em andamento

--- a/src/pages/configuracao/senha/senha.module.css
+++ b/src/pages/configuracao/senha/senha.module.css
@@ -5,3 +5,11 @@
     justify-content: center;
     margin-top: 40px
 }
+
+.botaoCarregamento{
+    display: block;
+    width: 50%;
+    position: fixed;
+    bottom: 0%;
+    right: 0%;
+}
