--- a/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
+++ b/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
@@ -217,3 +217,45 @@
 .modalRodape{
     height: 658px !important;
 }
+/* ===================================== Estilo do detalhe ===================================*/
+
+.divHeaderDetail{
+    background-color: #979797;
+    height: 300px;
+    width: 100%;
+}
+
+.divBottomHeaderDetail{
+    background-color: #9EC69D;
+    height: 40px;
+    width: 100%;
+    color: #fff;
+    display: flex;
+    margin: auto;
+    justify-content: center;
+}
+
+.inconLocal{
+    color: rgb(187, 5, 5)
+}
+
+.divDetalhes{
+    display: flex;
+}
+
+.divDescricaoDetail{
+    width: 100%;
+    height: 50px;
+    background-color: #e2e2e2;
+}
+
+.itemDetalhe{
+    margin: 10px;
+    padding: 5px;
+    background-color: #e4e2e2;
+    border-radius: 10px;
+    color: #000;
+    margin-top: 0px;
+    border: solid 1px;
+    border-color: #626262;
+}
