--- a/src/pages/landingpage/landing.module.css
+++ b/src/pages/landingpage/landing.module.css
@@ -1,6 +1,50 @@
 .DivFundoladingpage{
-    background-color: #f1f8fd;
+    background-color: #ffffff;
     height: 100vh;
     width: 100%;
     margin-top: -20px;
+}
+
+.DivHeaderPage{
+    background-color: #49ACC7;
+    height: 610px;
+    display: flex;
+    justify-content: center;
+
+}
+
+.Estilofoto1{
+    height: 600px;
+    width: 60vw;
+    object-fit: cover;
+    margin-top: 10px;
+}
+
+.DivTextoPage{
+    margin-top: 80px;
+    width: 600px;
+    color: #fff;
+    font-size: 28px;
+    margin-left: 50px;
+}
+
+.texto1{
+   color: yellow;
+}
+
+.botaoPlantar{
+    margin: 20px;
+    width: 200px;
+    height: 50px;
+    background-color: orange;
+    font-size: 18px;
+    border-radius: 50px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    cursor: pointer;
+    
+}
+.botaoPlantar:hover{
+    box-shadow: 2px 2px 10px 2px #767676;
 }
