--- a/src/pages/locaisPlantacao/cadastrarLocal/cadlocais.module.css
+++ b/src/pages/locaisPlantacao/cadastrarLocal/cadlocais.module.css
@@ -48,3 +48,112 @@
 .tituloDeletar{
     color: #EE6755
 }
+
+/* Estilo do modal, escolha de arvore */
+.Busca{
+    width: 100%;
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+.headerTabela{
+    background-color: #9ec69d;
+    width: 94%;
+    margin: auto;
+    border-radius: 10px 10px 0px 0px;
+}
+
+.DropMENU{
+    margin-inline-start: auto;
+    display: flex
+}
+
+.IconeMENU{   
+    --bs-btn-bg: none;
+    --bs-btn-border-color: none;
+    --bs-btn-hover-color: var(--secundaryTom1-color3)!important;
+    background-color: transparent !important;
+    color: none;
+    --bs-btn-hover-color: none;
+    --bs-btn-hover-bg: none;
+}
+
+.IconeMENU2{
+    --bs-btn-bg: none;
+    --bs-btn-border-color: none;
+    --bs-btn-hover-color: #55ACEE!important;
+    background-color: transparent !important;
+    color: #000;
+    --bs-btn-active-color: #000 ;
+    --bs-btn-hover-color: #000;
+    --bs-btn-hover-bg: #000;
+}
+
+
+.IconeDrop{
+    width: 20px;
+    height: 20px;
+    color: var(--secundaryTom1-color3);
+    margin-right: 10px;
+}
+
+/* Estilo dos cards */
+.divFundoModal{
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    justify-content: center;
+}
+.Card{
+    width: 30%;
+    height: 30%;
+    margin: 10px;
+    
+}
+
+.HeaderCard{
+    display: flex;
+    
+}
+.HeaderCard0{
+    background-color: #9EC69D;
+}
+
+.opcoesCard{
+    display: flex;
+    margin-inline-start: auto;
+}
+
+.iconeCard{
+    font-size: 20px;
+    margin: 3px;
+    cursor: pointer;
+    color: #fff
+}
+.StatusCard{
+    font-size: 12px;
+    width: 80px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 3px;
+    background-color: green;
+    color: #fff;
+    justify-self: auto;
+    justify-content: auto;
+    justify-items: auto;
+   
+}
+
+.StatusCard2{
+    font-size: 12px;
+    width: 80px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 3px;
+    background-color: red;
+    color: #fff;
+    justify-self: auto;
+    justify-content: auto;
+    justify-items: auto;
+   
+}
