Atualiza versao cadastro de local em andamento

--- a/src/pages/locaisPlantacao/cadastrarLocal/cadlocais.module.css
+++ b/src/pages/locaisPlantacao/cadastrarLocal/cadlocais.module.css
@@ -57,11 +57,11 @@
 }
 
 .headerTabela{
-    background-color: #9ec69d;
+    background-color: #2F2F2F;
     width: 94%;
     margin: auto;
     border-radius: 10px 10px 0px 0px;
-}
+} 
 
 .DropMENU{
     margin-inline-start: auto;
