Atualiza versao lista de árvores em cadastro local

--- a/src/pages/locaisPlantacao/cadastrarLocal/cadlocais.module.css
+++ b/src/pages/locaisPlantacao/cadastrarLocal/cadlocais.module.css
@@ -157,3 +157,17 @@
     justify-items: auto;
    
 }
+
+.divSubtituloModal{
+    display: flex;
+    justify-content: center;
+}
+
+.imgArvore{
+    width: 99%;
+    height: 20vh;
+    margin: auto;
+    display: flex;
+    object-fit: cover;
+
+}
