--- a/src/pages/landingpage/landing.module.css
+++ b/src/pages/landingpage/landing.module.css
@@ -26,7 +26,7 @@
     color: #fff;
     font-size: 28px;
     margin-left: 50px;
-    font-family: "Manrope", sans-serif;;
+    font-family: "Manrope", sans-serif;
 }
 
 .texto1{
@@ -37,7 +37,7 @@
     margin: 20px;
     width: 200px;
     height: 50px;
-    background-color: orange;
+    background-color: #EE8C55;
     font-size: 18px;
     border-radius: 50px;
     justify-content: center;
@@ -153,4 +153,59 @@
 }
 .botaoSaiba:hover{
     box-shadow: 2px 2px 10px 2px #bfbfbf;
+}
+
+.botaoPlantar2{
+    margin: 20px;
+    width: 200px;
+    height: 50px;
+    background-color: #EE8C55;
+    font-size: 18px;
+    border-radius: 50px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    cursor: pointer;
+    color: #fff;
+    margin: auto;
+}
+.botaoPlantar2:hover{
+    box-shadow: 2px 2px 10px 2px #141414;
+}
+
+
+.EstiloPlantando{
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    filter: brightness(68%)  contrast(128%);
+    /* filter: */
+}
+
+.divConectse{
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    font-size: 30px;
+    color: #469444;
+    font-family: "Manrope", sans-serif;
+}
+.divlegendaPlantando{
+    display: flex;
+    position: absolute;
+    margin-top: 5%;
+    font-size: 30px;
+    inset-inline-start: auto;
+    color: #ffffff;
+    width: 100%;
+    z-index: 10;
+}
+    .divdivLegenda{
+       width: 50%;
+       margin-inline-start: auto;
+       font-family: "Manrope", sans-serif;
+    }
+.EstilopLegPlantArv{
+   
+    color:#55ACEE
 }
