--- a/src/pages/landingpage/landing.module.css
+++ b/src/pages/landingpage/landing.module.css
@@ -199,6 +199,7 @@
     color: #ffffff;
     width: 90%;
     z-index: 10;
+    margin-left: 10px;
 }
     .divdivLegenda{
        width: 50%;
@@ -208,4 +209,27 @@
 .EstilopLegPlantArv{
    
     color:#55ACEE
+}
+
+.EstiloMulher{
+    width: 100%;
+    height: 780px;
+    object-fit: cover;
+    /* object-fit: cover;
+    filter: brightness(68%)  contrast(128%); */
+}
+
+.div1{
+    width: 25%;
+}
+.div2{
+    width: 55%;
+}
+.div3{
+    width: 20%;
+}
+
+.Icone1{
+    color:#141414;
+   margin-top: 40px
 }
