--- a/src/pages/locaisPlantacao/cadastrarLocal/cadlocais.module.css
+++ b/src/pages/locaisPlantacao/cadastrarLocal/cadlocais.module.css
@@ -44,6 +44,7 @@
     position: fixed;
     bottom: 0%;
     right: 0%;
+    z-index: 15;
 }
 .tituloDeletar{
     color: #EE6755
@@ -103,6 +104,7 @@
     flex-wrap: wrap;
     margin: auto;
     justify-content: center;
+    width: 70vw;
 }
 .Card{
     width: 30%;
