--- a/src/pages/locaisPlantacao/cadastrarLocal/cadlocais.module.css
+++ b/src/pages/locaisPlantacao/cadastrarLocal/cadlocais.module.css
@@ -183,11 +183,12 @@
 
 .divcolecao{
    margin-top: 10px;
-   width: 40%;
+   width: 100%;
    background-color: #9EC69D;
    justify-content: center;
-   margin: auto;
+   /* margin: auto; */
    padding: 5px;
+   border-left: solid 8px green;
    
 }
 .itemColecao{
@@ -206,7 +207,7 @@
     justify-content: center;
     align-items: center;
     display: flex;
-   
+    
     color: #5a5a5a;
     margin: auto;
 }
