--- a/src/pages/landingpage/landing.module.css
+++ b/src/pages/landingpage/landing.module.css
@@ -233,3 +233,45 @@
     color:#141414;
    margin-top: 40px
 }
+
+.divHeaderDetail{
+    background-color: #979797;
+    height: 400px;
+    width: 100%;
+}
+
+.divImpactos{
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    font-size: 30px;
+    color: #55ACEE;
+    font-family: "Manrope", sans-serif;
+}
+.divImpactosDetail{
+    display: flex;
+    width: 80%;
+    justify-content: center;
+    margin: auto;
+    align-items: center;
+    align-self: auto;
+}
+
+.divcoluna1{
+    width: 50%;
+    justify-content: center;
+    font-size: 24px;
+    font-family: "Manrope", sans-serif;
+    margin: auto;
+    text-align: center;
+}
+.subtitulo{
+    color:#469444
+}
+.divcoluna2{
+    width: 50%;
+    justify-content: center;
+    font-size: 24px;
+    font-family: "Manrope", sans-serif;
+    text-align: center;
+}
