--- a/src/pages/plantar/plantar.module.css
+++ b/src/pages/plantar/plantar.module.css
@@ -73,7 +73,7 @@
 color: #55ACEE
 }
 
-/* =============CARDS LOCAL========== */
+/* =============CARDS LOCAL estilo 1========== */
 
 .Card{
     width: 30%;
@@ -146,4 +146,153 @@ color: #55ACEE
         margin: auto;
         
     }
+}
+
+/* CARDS LOCAL ESTILO 2 */
+.cardLocais{
+    height: 400px;
+    width: 350px;
+    background-color: lavender;
+    /* display: flex; */
+    margin: auto;
+    margin-top: 15px;
+    border: solid 2px;
+    border-color: #979797 ;
+    /* border-radius: 15px; */
+    /* cursor: pointer; */
+    /* text-align: center; */
+   
+    
+}
+.HeaderLocais{
+    text-align: center;
+    display: flex;
+    
+}
+
+
+.iconesAdmin{
+    font-size: 20px;
+    margin-inline-start: auto;
+    
+}
+/* .iconesAdmin:hover{
+    margin-inline-start: auto;
+   
+} */
+.iconesAdminIcon1{
+    cursor: pointer;
+    font-size: 23px;
+    transition: 0.2s;
+   
+}
+.iconesAdminIcon1:hover{
+    cursor: pointer;
+    font-size: 25px;
+    transition: 0.2s;
+    color: #55ACEE
+}
+.iconesAdminIcon2{
+    cursor: pointer;
+    font-size: 23px;
+    transition: 0.2s;
+}
+.iconesAdminIcon2:hover{
+    cursor: pointer;
+    font-size: 25px;
+    transition: 0.2s;
+    color: #EE6755
+}
+
+.cardLocais:hover{
+    box-shadow: 2px 2px 3px 3px #e5e5e5;
+    transition: 0.2s;
+    
+    /*border-color: rgb(37, 194, 76); */
+    /* background-image: linear-gradient(honeydew, #93d7e9); */
+    /* background-color: #d9f9d9 */
+    background-color: #fff;
+}
+.divNome{
+    display: flex;
+    justify-content: center;
+}
+.imagemLocal{
+    width: 100%;
+    height: 50%;
+}
+
+.divIcones{
+    background-color: #ffffff;
+    width: 108%;
+    border: solid 1px #ebeaea;
+    margin-left: -15px;
+    font-size: 20px;
+    display: flex;
+}
+.Icon1{
+    color: #116582;
+    margin-right: 5px;
+}
+.Icon2{
+    margin-right: 5px;
+    color: #040404;
+}
+.Icon3{
+    margin-right: 5px;
+    color: #118222;
+}
+.Icon4{
+    margin-right: 5px;
+    color: #3ce812;
+}
+.Icon5{
+    margin-right: 5px;
+    color: #824011;
+}
+
+
+.nomeItem{
+    margin-left: auto;
+    margin-right: 10px;
+}
+
+.DescricaoLocais{
+    margin-left: 5px;
+    text-align: center;
+}
+
+.footerCard{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.divBotaoPlant{
+    display: flex;
+    justify-content: center;
+}
+.botaoPlantar{
+    margin: 10px;
+    background-color: #2F2F2F;
+    border-color: #2F2F2F
+}
+
+.botaoPlantar:hover{
+    background-color: var(--secundaryTom1-color3);
+    border-color: var(--secundaryTom1-color3);
+}
+
+.botaoCarregamento{
+    display: block;
+    width: 50%;
+    position: fixed;
+    bottom: 0%;
+    right: 0%;
+}
+
+.divLocais{
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    
 }
