--- a/src/pages/plantar/plantar.module.css
+++ b/src/pages/plantar/plantar.module.css
@@ -1,13 +1,11 @@
 .divFundoPlantar{
-    height: 100%;
+    /* height: 100%; */
     margin-top: 7%;
     display: flex;
 }
 .Coluna1{
     width: 80%;
-    height: 800px;
-    
-    
+    height:100%;
 }
 .Coluna2{
     width: 400px;
@@ -301,4 +299,12 @@ color: #55ACEE
     background-color: #979797;
     height: 200px;
     width: 100%;
+}
+
+/* ===============ESTILO DOS CARDS ARVORES=============== */
+.divItens1{
+    height: 400px;
+    overflow-y: auto;
+    flex-wrap: wrap;
+    display: flex;
 }
