Atualiza versao plantar em andamento

--- a/src/pages/plantar/plantar.module.css
+++ b/src/pages/plantar/plantar.module.css
@@ -327,3 +327,53 @@ color: #55ACEE
    
    
 }
+
+/*FILTRO DE BUSCA*/
+
+.Busca{
+    width: 100%;
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+.headerTabela{
+    background-color: #2F2F2F;
+    width: 96%;
+    margin: auto;
+    border-radius: 10px 10px 0px 0px;
+} 
+
+
+.DropMENU{
+    margin-inline-start: auto;
+    display: flex
+}
+
+.IconeMENU{   
+    --bs-btn-bg: none;
+    --bs-btn-border-color: none;
+    --bs-btn-hover-color: var(--secundaryTom1-color3)!important;
+    background-color: transparent !important;
+    color: none;
+    --bs-btn-hover-color: none;
+    --bs-btn-hover-bg: none;
+}
+
+.IconeMENU2{
+    --bs-btn-bg: none;
+    --bs-btn-border-color: none;
+    --bs-btn-hover-color: #55ACEE!important;
+    background-color: transparent !important;
+    color: #000;
+    --bs-btn-active-color: #000 ;
+    --bs-btn-hover-color: #000;
+    --bs-btn-hover-bg: #000;
+}
+
+
+.IconeDrop{
+    width: 20px;
+    height: 20px;
+    color: var(--secundaryTom1-color3);
+    margin-right: 10px;
+}
