--- a/src/pages/plantar/plantar.module.css
+++ b/src/pages/plantar/plantar.module.css
@@ -366,7 +366,7 @@ color: #55ACEE
 .Busca{
     width: 100%;
     margin: auto;
-    margin-bottom: 20px;
+    margin-bottom: 12px;
 }
 
 .headerTabela{
@@ -374,6 +374,7 @@ color: #55ACEE
     width: 96%;
     margin: auto;
     border-radius: 10px 10px 0px 0px;
+    height: 65px;
 } 
 
 
