--- a/src/components/cards/cardLogin/cardlogin.module.css
+++ b/src/components/cards/cardLogin/cardlogin.module.css
@@ -5,7 +5,7 @@
     border-radius: 10px;
     position: relative;
     margin: auto;
-    top: 150px;
+    top: 130px;
     /* opacity: 0.6 */
     
 }
@@ -52,7 +52,8 @@
 }
 
 .DivCorpoCard{
-    display: flex
+    display: flex;
+    
 }
 
 .TituloCard{
@@ -61,12 +62,13 @@
     margin: auto;
     font-size: 28px;
     display:inline-flex;
-    margin-top: 70px;
+    margin-top: 60px;
+    margin-bottom: 40px;
     margin-left: 80px;
     font-family: var(--fontPadrao);
     color: #469444
     
-    
+     
 }
 
 .imgMundo{
