--- a/src/pages/login.module.css
+++ b/src/pages/login.module.css
@@ -1,8 +1,8 @@
-.divFundo{
+.divFundoTela{
     /* background-image: conic-gradient( #469444, #3CF937, #3B37F9,black, #55ACEE);
     background-image: radial-gradient( #55ACEE 75deg, #3B37F9, #3CF937,#469444, black  ); */
     background: conic-gradient(from 180deg at 50% 50%, #55ACEE -78.75deg, #469444 45deg, rgb(0, 0, 0) 120deg, #164c9c 255deg,   #70a9f0 281.25deg, #469444 405deg);
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     /* margin: -10px; */
 }
