--- a/src/pages/plantar/plantar.module.css
+++ b/src/pages/plantar/plantar.module.css
@@ -442,3 +442,8 @@ color: #55ACEE
 .carrosselAlice{
     width: 400px;
 }
+
+.alice-carousel__dots-item:not(.__custom):hover, .alice-carousel__dots-item:not(.__custom).__active {
+    background-color: #6e7ebc;
+    border: solid 8px;
+}
