--- a/src/pages/usuarios/listaUsuario/listauser.module.css
+++ b/src/pages/usuarios/listaUsuario/listauser.module.css
@@ -56,9 +56,9 @@ margin-top: 100px
 }
 
 .Busca{
-    width: 80%;
+    width: 100%;
     margin: auto;
-    margin-bottom: 20px;
+    margin-bottom: 12px;
 }
  
 .headerTabela{
@@ -66,7 +66,16 @@ margin-top: 100px
     width: 80%;
     margin: auto;
     border-radius: 10px 10px 0px 0px;
+    height: 65px;
 }
+
+/* .headerTabela{
+    background-color: #2F2F2F;
+    width: 96%;
+    margin: auto;
+    border-radius: 10px 10px 0px 0px;
+    height: 65px;
+}  */
 
 .DropMENU{
     margin-inline-start: auto;
@@ -128,7 +137,7 @@ margin-top: 100px
     display: flex;
 }
 
-
+ 
 /* =================================Responsividade===================================== */
 @media (max-width: 800px) {
      
