Atualiza versao lista de local paginação

--- a/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
+++ b/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
@@ -280,3 +280,11 @@
     margin: 10px;
 }
 
+/*Paginação*/
+.divPaginacao{
+    margin-left: 20px;
+    margin-top: 10px;
+    bottom: 5px;
+    justify-content: center;
+    display: flex;
+}
