--- a/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
+++ b/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
@@ -8,6 +8,7 @@
 .divLocais{
     display: flex;
     flex-wrap: wrap;
+    width: 90%;
     margin: auto;
     
 }
@@ -19,18 +20,21 @@
     margin-top: 10%;
 }
 
+/*FILTRO DE BUSCA*/
+
 .Busca{
-    width: 80%;
+    width: 100%;
     margin: auto;
-    margin-bottom: 20px;
+    margin-bottom: 12px;
 }
- 
+
 .headerTabela{
     background-color: #2F2F2F;
-    width: 92.5%;
+    width: 87%;
     margin: auto;
     border-radius: 10px 10px 0px 0px;
-}
+    height: 65px;
+} 
 
 .DropMENU{
     margin-inline-start: auto;
