--- a/src/pages/plantar/plantar.module.css
+++ b/src/pages/plantar/plantar.module.css
@@ -28,8 +28,10 @@
     background-color: #116582;
     justify-content: center;
     height: 40px;
+    width: 25px;
     color: #fff;
-    padding: 10px;
+    display: flex;
+    align-items: center;
     
 }
 
