--- a/src/pages/arvores/listarArvores/listaarvores.module.css
+++ b/src/pages/arvores/listarArvores/listaarvores.module.css
@@ -132,9 +132,9 @@
 
 .CardArvore{
     width: 20%;
-    /* height: 30%; */
+    /* height: 30%; */ 
     margin: 10px;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 .CardArvore:hover{
     /* border: solid 2px #2ccd23; */
@@ -180,12 +180,32 @@
     margin-inline-start: auto;
 }
 
-.iconeCard{
-    font-size: 20px;
-    margin: 3px;
+.iconesAdminIcon1{
     cursor: pointer;
-    color: #fff
+    font-size: 23px;
+    transition: 0.2s;
+   
 }
+.iconesAdminIcon1:hover{
+    cursor: pointer;
+    font-size: 25px;
+    transition: 0.2s;
+    color: #55ACEE
+}
+.iconesAdminIcon2{
+    cursor: pointer;
+    font-size: 23px;
+    transition: 0.2s;
+}
+.iconesAdminIcon2:hover{
+    cursor: pointer;
+    font-size: 25px;
+    transition: 0.2s;
+    color: #EE6755
+}
+
+
+
 .StatusCard{
     font-size: 12px;
     width: 80px;
