--- a/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
+++ b/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
@@ -3,7 +3,7 @@
     margin: auto;
     justify-content: center;
     
-    
+     
 }
 .divLocais{
     display: flex;
@@ -151,7 +151,7 @@
     height: 50%;
 }
 
-.divIcones{
+/* .divIcones{
     background-color: #ffffff;
     width: 108%;
     border: solid 1px #ebeaea;
@@ -178,7 +178,7 @@
 .Icon5{
     margin-right: 5px;
     color: #824011;
-}
+} */
 
 
 .nomeItem{
@@ -222,6 +222,44 @@
 .modalRodape{
     height: 658px !important;
 }
+
+.divIcones{
+    background-color: #ffffff;
+    width: 100%;
+    border: solid 1px #ebeaea;
+    /* margin-left: -15px; */
+    font-size: 18px;
+    display: flex;
+    
+    align-items: center;
+}
+.Icon1{
+    color: #116582;
+    margin-right: 5px;
+}
+.Icon2{
+    margin-right: 5px;
+    color: #040404;
+}
+.Icon3{
+    margin-right: 5px;
+    color: #118222;
+}
+.Icon4{
+    margin-right: 5px;
+    color: #3ce812;
+}
+.Icon5{
+    margin-right: 5px;
+    color: #824011;
+}
+
+.textmuted{
+    width: 100%;
+    padding: 2px;
+}
+
+
 /* ===================================== Estilo do detalhe ===================================*/
 
 .divHeaderDetail{
