--- a/src/pages/plantar/plantar.module.css
+++ b/src/pages/plantar/plantar.module.css
@@ -363,11 +363,11 @@ color: #55ACEE
     margin: auto;
     justify-content: center;
 }
-
+ 
 .CardArvore{
-    width: 20%;
+    width: 300px;
     /* height: 30%; */
-    margin: 10px;
+    margin: 40px;
     cursor: pointer;
 }
 .CardArvore:hover{
@@ -379,6 +379,8 @@ color: #55ACEE
     display: flex;
     flex-flow: wrap;
     justify-content: center;
+
+   
 }
 /*paginação */
 .divPaginacao{
