--- a/src/pages/plantar/plantar.module.css
+++ b/src/pages/plantar/plantar.module.css
@@ -369,7 +369,8 @@ color: #55ACEE
 .CardArvore{
     width: 300px;
     /* height: 30%; */
-    margin: 40px;
+    margin: auto;
+    margin-top: 10px;
     /* cursor: pointer; */
 }
 .CardArvore:hover{
@@ -476,11 +477,13 @@ color: #55ACEE
     display: flex;
     justify-content: center;
     font-family: var(--fontPadrao);
+    flex-wrap: wrap;
 }
 
 .CardQtd{
 background-color: #116582;
 margin-left: 20px;
+margin: 10px;
 
 }
 .CardQtd:hover{
@@ -508,10 +511,13 @@ margin-left: 20px;
 }
 
 .EspecQtd{
+    margin-top: 10px;
     text-align: center;
     justify-content: center;
     align-items: center;
     display: grid;
+    border: solid 1.5px #b3b2b2;
+    border-radius: 10px;
 }
 .caixaQtd{
     width: 100%;
