--- a/src/pages/plantar/plantar.module.css
+++ b/src/pages/plantar/plantar.module.css
@@ -1,7 +1,13 @@
 .divFundoPlantar{
     /* height: 100%; */
-    margin-top: 7%;
+    margin-top: 1%;
     display: flex;
+}
+
+.migalhas{
+    display: flex;
+    margin-top: 10%;
+    margin-left: 10%
 }
 .Coluna1{
     width: 80%;
