--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -6,6 +6,9 @@
     height: 290px;
     margin-bottom: 0px;
     color: #fff;
+    display: block;
+    margin-top: 50px;
+    
 }
 .fundoRodape2{
     top: 80px;
