--- a/src/pages/plantar/plantar.module.css
+++ b/src/pages/plantar/plantar.module.css
@@ -40,6 +40,7 @@
     justify-content: center;
     text-align: center;
     
+    
 }
 
 .divTituloPassos{
@@ -65,16 +66,18 @@
 
 .divDetailCompra{
     height: 250px;
-    width: 300px;
+    width: 290px;
     margin: auto;
     justify-content: center;
     /* background-color: #E8F4E7; */
     background-color: #c8dfe7;
     border-radius: 10px;
     padding: 5px;
-    position:fixed;
+    /* position:fixed; */
     margin-left: 5px;
     margin-top: 5px;
+    position: sticky;
+    top: 110px;
 
 }
 
