--- a/src/pages/plantar/plantar.module.css
+++ b/src/pages/plantar/plantar.module.css
@@ -4,6 +4,38 @@
     display: flex;
 }
 
+@media (max-width: 1350px){
+    .Coluna2{
+        display: none;
+    
+    }
+
+    .divRevisaoRespons{
+     /* height: 100px;
+     width: 100px;
+     border-radius: 100%;
+     background-color: #116582;    */
+
+     height: 100px;
+     width: 100%;
+     margin: auto;
+     justify-content: center;
+     /* background-color: #E8F4E7; */
+     background-color: #c8dfe7;
+     border-radius: 10px;
+     
+     /* position:fixed; */
+     margin-bottom: inherit;
+     bottom: 0px;
+     position: fixed;
+     top: 110px;
+
+
+    }
+
+
+}
+
 .migalhas{
     display: flex;
     margin-top: 10%;
