--- a/src/pages/plantar/plantar.module.css
+++ b/src/pages/plantar/plantar.module.css
@@ -613,3 +613,45 @@ margin: 10px;
   
 }
 
+/*ESTILO DO CHECKOUT*/
+.divFotoPerfil{
+    display: flex;
+    margin: auto;
+    justify-content: center;
+
+}
+.FotoPerfil{
+    width: 180px;
+    height: 180px;
+    border-radius: 100%;
+
+}
+.divMarcacao{
+    display: flex;
+}
+.MarcacaoPassoChkt{
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    background-color: #118222;
+    justify-content: center;
+    color: #fff;
+    display: flex;
+    align-items: center;
+}
+.tituloMarcacao{
+    margin-top: 6px;
+    margin-left: 5px;
+}
+.divDadosContribuinte{
+    /* text-align: center; */
+    border-left: solid 1.5px #2F2F2F;
+    flex-wrap: wrap;
+    width: 80%;
+    margin-left: 20px;
+    height: 230px;
+    padding-left: 25px;
+    font-size: 18px;
+    font-family: var(--fontPadrao);
+    
+}
